Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-129681

QML imports break on UNC paths that contain `%` chars

XMLWordPrintable

    • Windows
    • a24baed01 (dev), ec00e1045 (6.8), e095743cf (tqtc/lts-6.5), a0a51f3af (tqtc/lts-6.2)

      To reproduce:

      • Run app using QML from a network drive and have a `%` somewhere in the path to the executable.

      The issue is in `qqmlimport_p.h:401-404`. When the path starts with `//`, `QUrl::toString(QUrl::removeScheme)` is used to convert the URL to string. Unfortunately, this seems to imply `PrettyEncoding` with produces a string with `%25` instead of `%`.

      This completely breaks all QML imports. The application will not start properly. It will simply report `module "QtQuick.Window" is not installed` although all DLLs are present.

      Please, no questions about running apps from network drives and having `%` in paths. People do.

        For Gerrit Dashboard: QTBUG-129681
        # Subject Branch Project Status CR V

            ulherman Ulf Hermann
            tfm123 Ole
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes