QTBUG-129681 Correctly convert URL to local path